2009-10-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* beacon.c, config.c, aprx.h, aprx.conf.in, aprx-complex.conf.in,
	  aprx.8.in:
	    Added a 'beaconmode { aprsis | both | radio }' config option,
	    which says where the beacons are sent to.

	* ROADMAP
	    Development roadmap for first digit of version number

2009-10-25  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* digipeater.c, beacon.c, interface.c, aprx.h:
	    Put all beacons on digipeater's transmitter duplicate checker
	    storage.  Now a beacon with WIDE2-2 path will not be repeated
	    by message originator.  Re-organized beacon's code base.

	* netax25.c, interface.c, aprx.h:
	    Use Link-Level mechanism to send arbitrary AX.25 packets to
	    desired devices.  Added also a about once minute run code
	    that checks current AX.25 devices in the system, and maps
	    necessary ifindex:es to netdevices wanting to do IO.
	    And all parameters to 'netax25_sendto()' are const..

	* aprx.h, aprx.c, aprx-stat.c, aprsis.c, erlang.c, igate.c:
	    Commonly used strftime() got put into  printtime() function.

	* VERSION 1.94

	* interface.c:
	    That final part of <interface> thing (below) can only
	    be done, if this interface has non-null tty field.

	* Makefile.in
	    "make valgrind" - helps debugging some screwups..

	* digipeater.c:
	    Stop scanning the viscous queue, once time limit exceeds
	    current time.

	* aprxpolls.c:
	    A screwup on allocations found with valgrind.  Oops!

	* netax25.c, aprsis.c, dupecheck.c, ttyreader.c, erlang.c,
	  aprx.c, aprx.h, ax25.c, beacon.c, igate.c, historydb.c,
	  valgrind.c, Makefile.in:
	    Code changes to clean valgrind outputs on nuisance messages.
	    And at least one bugfix for valgrind environment...

2009-10-24  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* telemetry.c:
	    Changed telemetry channel 2:  Erlangs from bytes_tx accounting.
	    Now there is separate channel load graph showing how much this