@@ -1,3 +1,9 @@
+2009-10-27  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
+
+	* aprx.h, aprx.c, aprsis.c, beacon.c, netax25.c, ttyreader.c,
+	  erlang.c, aprx-stat.c, igate.c:
+	    Modify the printtime() to print millisecond resolution times.
+
 2009-10-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
 	* beacon.c, config.c, aprx.h, aprx.conf.in, aprx-complex.conf.in,
